--- a/src/components/forBusiness/styleBusiness.css
+++ b/src/components/forBusiness/styleBusiness.css
@@ -38,16 +38,24 @@
 .nav-business ul li a {
   text-decoration: none;
   color: black;
+  font-weight: 500;
   transition: all 0.4s;
-  font-weight: 700;
   font-size: 0.9rem;
   display: inline;
 }
 .nav-business ul li a:hover {
   color: #FFCD1E;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+.nav-business ul li a:focus {
+  color: #273968;
+  font-weight: 700;
+  letter-spacing: 0.5px;
 }
 .nav-business ul li a:active {
-  color: #273968;
+  font-weight: 700;
+  letter-spacing: 0.5px;
 }
 
 .section-intro {
@@ -138,6 +146,181 @@
   font-size: 1.04rem;
 }
 
+.section-options {
+  margin-top: 7rem;
+}
+.section-options h3 {
+  font-weight: 700;
+  font-size: 1.8rem;
+  color: #273968;
+  letter-spacing: 1px;
+  margin-bottom: 2rem;
+  margin-left: 1.5rem;
+}
+.section-options a {
+  text-decoration: none;
+  color: gray;
+  margin-left: 2.2rem;
+  transition: all 0.3s;
+  font-weight: 500;
+}
+.section-options a img {
+  margin-right: 0.5rem;
+}
+.section-options a:hover {
+  border-bottom: 2px solid #FFCD1E;
+  padding-bottom: 1rem;
+  color: rgb(70, 68, 68);
+}
+.section-options a:focus {
+  border-bottom: 2px solid #FFCD1E;
+  padding-bottom: 1rem;
+  color: rgb(70, 68, 68);
+}
+
+.section-types {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+.section-types h3 {
+  color: #FFCD1E;
+  font-weight: 700;
+  font-size: 2rem;
+  margin-bottom: 4rem;
+}
+.section-types a {
+  text-decoration: none;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  color: grey;
+  font-weight: 500;
+  transition: all 0.3s;
+}
+.section-types a:hover {
+  border-bottom: 2.5px solid #FFCD1E;
+  padding-bottom: 0.5rem;
+  color: rgb(70, 68, 68);
+}
+.section-types a:focus {
+  border-bottom: 2.5px solid #FFCD1E;
+  padding-bottom: 0.5rem;
+  color: rgb(70, 68, 68);
+}
+
 .section-stages {
-  margin-top: 50rem;
+  padding-top: 5rem;
+  background-color: #F4F3F4;
+}
+.section-stages h3 {
+  color: #273968;
+  text-align: center;
+  font-weight: 700;
+  font-size: 2.1rem;
+}
+.section-stages p {
+  margin-top: 2rem;
+  line-height: 2;
+  text-align: center;
+  padding-left: 12rem;
+  padding-right: 12rem;
+}
+
+.section-stage p {
+  margin-top: 7px;
+  padding: 0;
+  text-align: left;
+  line-height: 1.4;
+  font-size: 0.75rem;
+}
+
+.stage-num {
+  font-size: 2.3rem;
+  color: #FFCD1E;
+}
+
+.stage-text {
+  vertical-align: middle;
+  font-size: 0.8rem;
+}
+
+.section-feedback {
+  margin-top: 8rem;
+  padding-bottom: 6rem;
+}
+.section-feedback .feedback-img {
+  overflow: hidden;
+}
+.section-feedback img {
+  transform: scale(1.6);
+}
+
+.check {
+  margin-top: 1.3rem;
+  font-size: 1rem;
+  color: rgb(63, 63, 63);
+  font-weight: 500;
+}
+.check a {
+  text-decoration: none;
+  color: #FFCD1E;
+  font-size: 0.85rem;
+  transition: all 0.5s;
+}
+.check a:hover {
+  color: #273968;
+}
+
+.animated-button__two {
+  padding: 0.8rem 2rem;
+  font-size: 1.05rem;
+  font-weight: 500;
+  background-color: #273968;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
+  transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
+  overflow: hidden;
+}
+
+.animated-button__two:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFCD1E;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s;
+  z-index: -1;
+}
+
+.animated-button__two:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFCD1E;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.5s;
+  z-index: -1;
+}
+
+.animated-button__two:hover:before {
+  transform: scaleX(1);
+}
+
+.animated-button__two:hover:after {
+  transform: scaleX(1);
+}
+
+.animated-button__two:hover {
+  background-color: #FFCD1E;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
 }/*# sourceMappingURL=styleBusiness.css.map */
