--- a/src/components/forBusiness/styleBusiness.scss
+++ b/src/components/forBusiness/styleBusiness.scss
@@ -42,18 +42,27 @@
     ul li a {
         text-decoration: none;
         color: black;
+        font-weight: 500;
         transition: all .4s;
-        font-weight: 700;
         font-size: .9rem;
         display: inline;
     }
 
     ul li a:hover {
         color: #FFCD1E;
+        font-weight: 700;
+        letter-spacing: .5px;
+    }
+
+    ul li a:focus {
+        color: #273968;
+        font-weight: 700;
+        letter-spacing: .5px;
     }
 
     ul li a:active {
-        color: #273968;
+        font-weight: 700;
+        letter-spacing: .5px;
     }
 }
 
@@ -172,7 +181,213 @@
     }
 }
 
+// options style
+.section-options {
+    margin-top: 7rem;
+
+    h3 {
+        font: {
+            weight: 700;
+            size: 1.8rem;
+        }
+
+        color: #273968;
+        letter-spacing: 1px;
+        margin-bottom: 2rem;
+        margin-left: 1.5rem;
+    }
+
+    a {
+        text-decoration: none;
+        color: gray;
+        margin-left: 2.2rem;
+        transition: all .3s;
+        font-weight: 500;
+
+        img {
+            margin-right: .5rem;
+        }
+    }
+
+    a:hover {
+        border-bottom: 2px solid #FFCD1E;
+        padding-bottom: 1rem;
+        color: rgb(70, 68, 68);
+    }
+
+    a:focus {
+        border-bottom: 2px solid #FFCD1E;
+        padding-bottom: 1rem;
+        color: rgb(70, 68, 68);
+    }
+}
+
+// types style
+.section-types {
+    padding: {
+        top: 6rem;
+        bottom: 6rem;
+    }
+
+    h3 {
+        color: #FFCD1E;
+        font-weight: 700;
+        font-size: 2rem;
+        margin-bottom: 4rem;
+    }
+
+    a {
+        text-decoration: none;
+        margin-right: 1rem;
+        margin-left: 1rem;
+        color: grey;
+        font-weight: 500;
+        transition: all .3s;
+    }
+
+    a:hover {
+        border-bottom: 2.5px solid #FFCD1E;
+        padding-bottom: .5rem;
+        color: rgb(70, 68, 68);
+    }
+
+    a:focus {
+        border-bottom: 2.5px solid #FFCD1E;
+        padding-bottom: .5rem;
+        color: rgb(70, 68, 68);
+    }
+}
+
 // stages style
 .section-stages {
-    margin-top: 50rem;
+    padding-top: 5rem;
+    background-color: #F4F3F4;
+
+    h3 {
+        color: #273968;
+        text-align: center;
+
+        font: {
+            weight: 700;
+            size: 2.1rem;
+        }
+    }
+
+    p {
+        margin-top: 2rem;
+        line-height: 2;
+        text-align: center;
+
+        padding: {
+            left: 12rem;
+            right: 12rem;
+        }
+    }
+}
+
+.section-stage {
+    p {
+        margin-top: 7px;
+        padding: 0;
+        text-align: left;
+        line-height: 1.4;
+        font-size: .75rem;
+    }
+}
+
+.stage-num {
+    font-size: 2.3rem;
+    color: #FFCD1E;
+}
+
+.stage-text {
+    vertical-align: middle;
+    font-size: .8rem;
+}
+
+// feedback style
+.section-feedback {
+    margin-top: 8rem;
+    padding-bottom: 6rem;
+
+    .feedback-img {
+        overflow: hidden;
+    }
+
+    img {
+        transform: scale(1.6);
+    }
+}
+
+.check {
+    margin-top: 1.3rem;
+    font-size: 1rem;
+    color: rgb(63, 63, 63);
+    font-weight: 500;
+
+    a {
+        text-decoration: none;
+        color: #FFCD1E;
+        font-size: .85rem;
+        transition: all .5s;
+    }
+
+    a:hover {
+        color: #273968;
+    }
+}
+
+.animated-button__two {
+    padding: .8rem 2rem;
+    font-size: 1.05rem;
+    font-weight: 500;
+    background-color: #273968;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    z-index: 1;
+    transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
+    overflow: hidden;
+}
+
+.animated-button__two:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFCD1E;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.5s;
+    z-index: -1;
+}
+
+.animated-button__two:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #FFCD1E;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.5s;
+    z-index: -1;
+}
+
+.animated-button__two:hover:before {
+    transform: scaleX(1);
+}
+
+.animated-button__two:hover:after {
+    transform: scaleX(1);
+}
+
+.animated-button__two:hover {
+    background-color: #FFCD1E;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    transform: scale(1.05);
 }
