--- a/src/components/privateIndividuals/style.css
+++ b/src/components/privateIndividuals/style.css
@@ -9,7 +9,7 @@
   border: none;
   cursor: pointer;
   transition: all opacity 10s visibility 10s;
-  z-index: 8;
+  z-index: 20;
 }
 
 #backToTopBtn.show {
@@ -21,4 +21,309 @@
 #backToTopBtn.hide {
   opacity: 0;
   visibility: hidden;
+}
+
+.nav-business {
+  position: sticky;
+  top: 240px;
+  margin-left: 3rem;
+  z-index: 10;
+}
+.nav-business ul {
+  list-style: none;
+}
+.nav-business li {
+  margin-top: 1rem;
+}
+.nav-business ul li a {
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+  transition: all 0.4s;
+  font-size: 0.9rem;
+  display: inline;
+}
+.nav-business ul li a:hover {
+  color: #FFCD1E;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+.nav-business ul li a:focus {
+  color: #273968;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+.nav-business ul li a:active {
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+
+.section-intro img {
+  width: 100%;
+  position: relative;
+}
+
+.section-intro__info {
+  position: absolute;
+  top: 30vh;
+  color: white;
+  padding-left: 12rem;
+  padding-right: 12rem;
+  box-sizing: border-box;
+  z-index: 3;
+}
+.section-intro__info h1 {
+  font-size: 3.2rem;
+}
+.section-intro__info p {
+  margin-top: 1.5rem;
+  font-weight: 700;
+  font-size: 1.1rem;
+}
+.section-intro__info span {
+  font-weight: 700;
+  font-size: 1.1rem;
+}
+.section-intro__info a {
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  font-size: 1.1rem;
+  transition: all 0.4s;
+}
+.section-intro__info a:hover {
+  color: #FFCD1E;
+}
+
+.section-intro__icons div {
+  position: absolute;
+  bottom: 1rem;
+  left: 38%;
+  transform: translateX(-50%);
+  display: flex;
+}
+.section-intro__icons img {
+  flex-direction: column;
+  margin-left: 15rem;
+}
+
+.section-reasons__one {
+  margin-top: 7rem;
+}
+.section-reasons__one div {
+  width: 68px;
+  height: 2.4px;
+  margin-right: 0.6rem;
+  margin-left: 37%;
+  background-color: #FFCD1E;
+  border: none;
+  display: inline-block;
+}
+.section-reasons__one span {
+  color: #FFCD1E;
+  letter-spacing: 0.4px;
+  vertical-align: middle;
+  font-size: 1.1rem;
+  font-weight: 700;
+}
+.section-reasons__one h2 {
+  color: #273968;
+  line-height: 1.1;
+  text-align: center;
+  margin-top: 1.5rem;
+  margin-bottom: 4rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+.section-reasons__one p {
+  width: 90%;
+  text-align: left;
+  line-height: 2;
+  margin-top: 1.5rem;
+  font-size: 1.04rem;
+}
+
+.section-reasons__two {
+  margin-top: 6rem;
+}
+.section-reasons__two h3 {
+  text-align: center;
+  margin-bottom: 4rem;
+  color: #273968;
+  line-height: 1.1;
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+
+.section-reasons__tree h4 {
+  text-align: center;
+  margin-top: 4rem;
+  opacity: 80%;
+}
+.section-reasons__tree p {
+  margin-top: 2rem;
+  width: 90%;
+  margin-bottom: 8rem;
+  font-style: sans-serif;
+  color: dimgrey;
+  font-size: 1.1rem;
+}
+
+.section-options {
+  background-color: #F8F8F8;
+  padding-top: 5rem;
+}
+.section-options h3 {
+  color: #FFCD1E;
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 900;
+}
+.section-options li {
+  color: #FFCD1E;
+  margin-top: 1rem;
+}
+.section-options p {
+  color: rgb(88, 88, 88);
+  font-size: 1rem;
+}
+
+.section-types {
+  padding-top: 2.5rem;
+}
+.section-types h3 {
+  color: #273968;
+}
+.section-types a {
+  opacity: 70%;
+  text-decoration: none;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+.section-types a:hover {
+  border-bottom: 3px solid #FFCD1E;
+  padding-bottom: 1rem;
+  opacity: 100%;
+}
+.section-types a:focus {
+  border-bottom: 3px solid #FFCD1E;
+  padding-bottom: 1rem;
+  opacity: 100%;
+}
+.section-types a span {
+  font-weight: 500;
+}
+
+.stages h3 {
+  color: #FFCD1E;
+  font-weight: 900;
+  font-size: 2.1rem;
+  margin-bottom: 3rem;
+}
+.stages a {
+  opacity: 70%;
+  text-decoration: none;
+  color: gray;
+  font-weight: 500;
+  transition: all 0.5s;
+  cursor: pointer;
+}
+.stages a:hover {
+  border-bottom: 3px solid #FFCD1E;
+  color: rgb(41, 39, 39);
+  padding-bottom: 0.4rem;
+  opacity: 100%;
+}
+.stages a:focus {
+  border-bottom: 3px solid #FFCD1E;
+  color: rgb(48, 47, 47);
+  padding-bottom: 0.4rem;
+  opacity: 100%;
+}
+.stages a span {
+  font-weight: 500;
+}
+
+.section-feedback {
+  margin-top: 8rem;
+  padding-bottom: 6rem;
+}
+.section-feedback .feedback-img {
+  overflow: hidden;
+}
+.section-feedback img {
+  transform: scale(1.6);
+}
+
+.check {
+  margin-top: 1.3rem;
+  font-size: 1rem;
+  color: rgb(63, 63, 63);
+  font-weight: 500;
+}
+.check a {
+  text-decoration: none;
+  color: #FFCD1E;
+  font-size: 0.85rem;
+  transition: all 0.5s;
+}
+.check a:hover {
+  color: #273968;
+}
+
+.animated-button__two {
+  padding: 0.8rem 2rem;
+  font-size: 1.05rem;
+  font-weight: 500;
+  background-color: #273968;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
+  transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
+  overflow: hidden;
+}
+
+.animated-button__two:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFCD1E;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s;
+  z-index: -1;
+}
+
+.animated-button__two:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #FFCD1E;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.5s;
+  z-index: -1;
+}
+
+.animated-button__two:hover:before {
+  transform: scaleX(1);
+}
+
+.animated-button__two:hover:after {
+  transform: scaleX(1);
+}
+
+.animated-button__two:hover {
+  background-color: #FFCD1E;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
 }/*# sourceMappingURL=style.css.map */
