--- a/src/components/forBusiness/styleBusiness.css
+++ b/src/components/forBusiness/styleBusiness.css
@@ -1,3 +1,4 @@
+/* scroll btn */
 #backToTopBtn {
   display: none;
   position: fixed;
@@ -23,18 +24,22 @@
   visibility: hidden;
 }
 
+/* nav style */
 .nav-business {
   position: sticky;
   top: 240px;
   margin-left: 3rem;
   z-index: 10;
 }
+
 .nav-business ul {
   list-style: none;
 }
+
 .nav-business li {
   margin-top: 1rem;
 }
+
 .nav-business ul li a {
   text-decoration: none;
   color: black;
@@ -43,25 +48,31 @@
   font-size: 0.9rem;
   display: inline;
 }
+
 .nav-business ul li a:hover {
   color: #FFCD1E;
   font-weight: 700;
   letter-spacing: 0.5px;
 }
+
 .nav-business ul li a:focus {
   color: #273968;
   font-weight: 700;
   letter-spacing: 0.5px;
 }
+
 .nav-business ul li a:active {
   font-weight: 700;
   letter-spacing: 0.5px;
 }
 
+/* intro style */
 .section-intro {
+  width: 100%;
   margin-top: -150px;
 }
-.section-intro img {
+
+.section-intro__img {
   width: 100%;
   position: relative;
 }
@@ -75,18 +86,22 @@
   box-sizing: border-box;
   z-index: 3;
 }
+
 .section-intro__info h1 {
   font-size: 3.2rem;
 }
+
 .section-intro__info p {
   margin-top: 1.4rem;
   font-weight: 500;
   font-size: 1.2rem;
 }
+
 .section-intro__info span {
   font-weight: 700;
   font-size: 1.1rem;
 }
+
 .section-intro__info a {
   text-decoration: none;
   color: white;
@@ -94,25 +109,23 @@
   font-size: 1.1rem;
   transition: all 0.4s;
 }
+
 .section-intro__info a:hover {
   color: #FFCD1E;
 }
 
-.section-intro__icons div {
+.section-intro__icons {
+  width: 40px;
   position: absolute;
   bottom: 0.5rem;
   left: 44%;
   transform: translateX(-50%);
-  display: flex;
-}
-.section-intro__icons img {
-  flex-direction: column;
-  margin-left: 7rem;
 }
 
 .section-reasons {
   margin-top: 7rem;
 }
+
 .section-reasons div {
   width: 68px;
   height: 2.4px;
@@ -121,6 +134,7 @@
   border: none;
   display: inline-block;
 }
+
 .section-reasons span {
   color: #FFCD1E;
   letter-spacing: 0.4px;
@@ -128,6 +142,7 @@
   font-size: 1.1rem;
   font-weight: 700;
 }
+
 .section-reasons h2 {
   color: #273968;
   line-height: 1.1;
@@ -138,6 +153,7 @@
   font-size: 2.5rem;
   font-weight: 700;
 }
+
 .section-reasons p {
   width: 90%;
   text-align: left;
@@ -148,15 +164,18 @@
 
 .section-options {
   margin-top: 7rem;
+  background-color: white !important;
 }
+
 .section-options h3 {
   font-weight: 700;
-  font-size: 1.8rem;
-  color: #273968;
+  font-size: 1.6rem;
+  color: #273968 !important;
   letter-spacing: 1px;
   margin-bottom: 2rem;
   margin-left: 1.5rem;
 }
+
 .section-options a {
   text-decoration: none;
   color: gray;
@@ -164,14 +183,17 @@
   transition: all 0.3s;
   font-weight: 500;
 }
+
 .section-options a img {
   margin-right: 0.5rem;
 }
+
 .section-options a:hover {
   border-bottom: 2px solid #FFCD1E;
   padding-bottom: 1rem;
   color: rgb(70, 68, 68);
 }
+
 .section-options a:focus {
   border-bottom: 2px solid #FFCD1E;
   padding-bottom: 1rem;
@@ -182,12 +204,14 @@
   padding-top: 6rem;
   padding-bottom: 6rem;
 }
+
 .section-types h3 {
   color: #FFCD1E;
   font-weight: 700;
   font-size: 2rem;
   margin-bottom: 4rem;
 }
+
 .section-types a {
   text-decoration: none;
   margin-right: 1rem;
@@ -196,11 +220,13 @@
   font-weight: 500;
   transition: all 0.3s;
 }
+
 .section-types a:hover {
   border-bottom: 2.5px solid #FFCD1E;
   padding-bottom: 0.5rem;
   color: rgb(70, 68, 68);
 }
+
 .section-types a:focus {
   border-bottom: 2.5px solid #FFCD1E;
   padding-bottom: 0.5rem;
@@ -210,13 +236,16 @@
 .section-stages {
   padding-top: 5rem;
   background-color: #F4F3F4;
+  overflow: hidden;
 }
+
 .section-stages h3 {
   color: #273968;
   text-align: center;
   font-weight: 700;
   font-size: 2.1rem;
 }
+
 .section-stages p {
   margin-top: 2rem;
   line-height: 2;
@@ -247,9 +276,11 @@
   margin-top: 8rem;
   padding-bottom: 6rem;
 }
+
 .section-feedback .feedback-img {
   overflow: hidden;
 }
+
 .section-feedback img {
   transform: scale(1.6);
 }
@@ -260,12 +291,14 @@
   color: rgb(63, 63, 63);
   font-weight: 500;
 }
+
 .check a {
   text-decoration: none;
   color: #FFCD1E;
   font-size: 0.85rem;
   transition: all 0.5s;
 }
+
 .check a:hover {
   color: #273968;
 }
@@ -323,4 +356,22 @@
   background-color: #FFCD1E;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
   transform: scale(1.05);
-}/*# sourceMappingURL=styleBusiness.css.map */
+}
+
+/* media */
+@media only screen and (max-width: 1200px) {}
+
+/* @media only screen and (max-width: 991px) {
+  .section-intro__img {
+    width: 100%;
+    height: 800px;
+  }
+
+  .section-intro__info {
+    top: 30vh;
+    color: white;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    z-index: 3;
+  }
+} */
